Fixed dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,6 +80,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground font-sans antialiased;
+    @apply bg-background font-sans text-foreground antialiased;
   }
 }
